# MicScore

./: LICENSE  README.md  app.py  layout.py  parser.py  pyproject.toml  requirements.txt  simplifier.py  utils.py
micscore/: __init__.py  app.py  layout.py  utils.py
tests/: test_end_to_end.py
