[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micscore"
version = "0.1.0"
description = "A tool to simplify and merge piano scores into a reduced number of pages."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pdf2image>=1.16",
    "Pillow>=8.0",
]

[project.optional-dependencies]
dev = [
    "reportlab>=3.6",
]

[project.scripts]
micscore = "micscore.app:main"
